# uct_ale

./: CMakeLists.txt  README.md  main.cpp  node.cpp  node.hpp  stay_alive.cpp  stay_alive.hpp  stay_alive_main.cpp  uct.cpp  uct.hpp
scripts/: collect_data.py  get_reward_sparsity.py  get_state_aliasing.py  predict_ram.py  visualize_policy.py
src/: node.cpp  stay_alive_main.cpp  uct.hpp  uct_main.cpp
